GNOME Bugzilla – Bug 710625
g_file_error_from_errno: Remove unneeded breaks
Last modified: 2013-10-23 04:22:36 UTC
.
Created attachment 257834 [details] [review] g_file_error_from_errno: Remove unneeded breaks Just wasting space
Review of attachment 257834 [details] [review]: OK
Attachment 257834 [details] pushed as 5a3fd63 - g_file_error_from_errno: Remove unneeded breaks