g_file_error_from_errno: Remove unneeded breaks

Just wasting space

https://bugzilla.gnome.org/show_bug.cgi?id=710625